[gd_scene load_steps=6 format=3 uid="uid://c414du41m7bws"]

[ext_resource type="Script" path="res://heal_shop_item.gd" id="1_vkhmx"]
[ext_resource type="Texture2D" uid="uid://cdg2dc66qj6o8" path="res://all art/PixelOffice/PixelOfficeAssets.png" id="2_5kmq5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_5j1qy"]
radius = 98.0

[sub_resource type="AtlasTexture" id="AtlasTexture_wycsd"]
atlas = ExtResource("2_5kmq5")
region = Rect2(147, 139, 9, 18)

[sub_resource type="SpriteFrames" id="SpriteFrames_3x5so"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wycsd")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="HealShopItem" type="Node2D"]
script = ExtResource("1_vkhmx")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_5j1qy")

[node name="Button" type="Button" parent="."]
visible = false
offset_left = -33.0
offset_top = -84.0
offset_right = 29.0
offset_bottom = -50.0
theme_override_font_sizes/font_size = 18
text = "Buy"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(4.65278, 4.65278)
sprite_frames = SubResource("SpriteFrames_3x5so")

[node name="CostLabel" type="Label" parent="."]
offset_left = -47.0
offset_top = 59.0
offset_right = 41.0
offset_bottom = 82.0
text = "Cost: "
horizontal_alignment = 1

[node name="ItemLabel" type="Label" parent="."]
offset_left = -43.0
offset_top = 39.0
offset_right = 45.0
offset_bottom = 62.0
text = "Heal"
horizontal_alignment = 1

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
